--- a/MeInVoice.html
+++ b/MeInVoice.html
@@ -136,8 +136,8 @@
                 <div class="row">
                     <div class="col">
                         <p class="text-muted">
-                            Được viết bởi
-                            <i class="fa fa-heart text-danger"></i> by
+                            Được phát triển
+                            <i class="fa fa-heart text-danger"></i> bởi
                             <a target="_blank" href="#" class="text-white">Duy Võ</a>
                             <br/>Copyright@
                             <a target="_blank" href="#" class="text-white">DuyVo</a>
