--- a/sme.html
+++ b/sme.html
@@ -13,7 +13,6 @@
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css'>
     <!-- CSS Custom -->
     <link rel="stylesheet" href="css/style_ketoan.css" type="text/css" media="all">
-
 </head>
 <body>
     <!-- Start Header -->
@@ -31,7 +30,7 @@
                     <div class="container">
                         <h1>MISA - PHẦN MỀM KẾ TOÁN DOANH NGHIỆP</h1>
                         <p class="lead">Triển Khai Nhanh Chóng - Tư Vấn Miễn Phí</p>
-                        <a href="#contact" class="btn btn-danger rounded-0 my-5">ĐĂNG KÝ DÙNG THỬ</a>
+                        <a href="#contact" class="btn btn-danger rounded-0 my-5">TƯ VẤN MIỄN PHÍ</a>
                     </div>
                 </div>
             </div>
@@ -89,12 +88,71 @@
             </div>
         </div>
     </div>
-
     
-    <!-- partial -->
+    <!-- Start Pre-footer -->
+    <div class="container-fluid text-center py-5 pre-footer text-white">
+        <div class="row">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h6 class="text-uppercase mb-3 mt-4 mt-md-0">Địa điểm</h6>
+                        <p class="text-muted">Hưng Ngân Garden
+                            <br />48A Dương Thị Mười, Tân Hưng Thuận
+                            <br /> Quận 12, TP.Hồ Chí Minh
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <h6 class="text-uppercase mb-3 mt-4 mt-md-0">Liên Kết</h6>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fab fa-google"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fa fa-phone"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fa fa-link"></i>
+                        </a>
+                        <a href="#" class="btn btn-with-icon btn-outline-light rounded-0">
+                            <i class="fa fa-inbox"></i>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <h6 class="text-uppercase mb-3 mt-4 mt-md-0">MISA - Phần Mềm Kế Toán Doanh Nghiệp</h6>
+                        <p class="text-muted">Triển Khai Nhanh Chóng - Tư Vấn Miễn Phí</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Pre-footer -->
+
+    <!-- Start footer -->
+    <footer class="container-fluid text-center py-4">
+        <div class="row">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <p class="text-muted">
+                            Được phát triển
+                            <i class="fa fa-heart text-danger"></i> bởi
+                            <a target="_blank" href="#" class="text-white">Duy Võ</a>
+                            <br/>Copyright@
+                            <a target="_blank" href="#" class="text-white">DuyVo</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- JS -->
     <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js'></script>
     <script rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js'></script>
+    <script rel='stylesheet' href='js/js-custom_ketoan.js'></script>
 </body>
 </html>
